2008-07-20  Ales Hakl  <ales at hakl dot net>

	* src/control.c: removed exception-related functions

	* src/conditions.c (dfsch_signal): condition system: signal function

2008-07-12  Ales Hkl  <ales at hakl dot net>

	* src/strings.c: Initialize head to NULL

2008-07-08  Ales Hakl  <ales at hakl dot net>

	* src/ports.c: use int64_t for file offsets

2008-07-06  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_cmp): fixed number comparison (which
	did not work for fractions and hung for bignums)

	* src/strings.c: removed the for-each api
	(dfsch_string_cmp_ci): case-insensitive comparison
	(string_case): case conversions of strings.

2008-07-05  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_char_*case): Case conversions of characters 
	(utf8_substring_cb): fixed substring

2008-06-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_get_object_properties): object properties

	* dfsch/number.h: number type and exactness predicates

	* src/weak.c (weak_key_hash_ref): weak-key-hash

2008-06-27  Ales Hakl  <ales at hakl dot net>

	* src/number.c: bignum support in standard numeric API
	(frac_cons): fracnums

	* src/bignum.c: usable bignums (without reasonable input)

2008-06-26  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_div_big): reasonable bignum division

2008-06-25  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_div_impl): unsigned bignum division

2008-06-24  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_sub): bignum subtraction (working)
	(bignum_mul): bignum multiplication (slow)

2008-06-23  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_add): bignum addition (definitely not usable)

2008-06-20  Ales Hakl  <ales at hakl dot net>

	* dfsch/util.h (DFSCH_RWLOCK_RDLOCK): emulation of rwlock using mutex

2008-05-23  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_context): *dfsch-platform*

2008-05-14  Ales Hakl  <ales at hakl dot net>
